# librarian-api

./: .gitignore  README.md  db.py  pyproject.toml
.github/workflows/: ci-cd.yaml
data/alignments/: README.md  rename_keys.py
data/hottp/: make_tsv_from_hottp_json.py
librarian_api/: db.py
scripts/: init_server.py  macula_data.py  requirements.txt  run_server.sh  server.py  server_with_tables.py
